--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://UdayVara.github.io/",
+  "homepage": "https://UdayVara.github.io/Newsapp",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
